[package]
name = "deco-private"
version = "0.1.0"
description = "Deco Private - Privacy-first decentralized startup accelerator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deco_private"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor"] }
